@@ -1,3 +1,12 @@
+Wed Jul  2 08:29:30 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
+
+        * cuts/java/jbi/client/JbiSink.java:
+        * cuts/java/jbi/client/JbiSource.java:
+         
+          Temporarily disabled the destruction of the sequences during the
+          close () method since this caused the CAPI client code to throw
+          a NULL pointer exception.
+
 Mon Jun 30 17:51:36 UTC 2008  Hamilton Turner  <hamilton.a.turner@vanderbilt.edu>
 
         * utils/BMW/website/metrics_temp/cuts_try_4/App_Code/ChartActions.cs:
@@ -37,7 +46,7 @@ Mon Jun 30 17:51:36 UTC 2008  Hamilton Turner  <hamilton.a.turner@vanderbilt.edu
         * utils/BMW/website/metrics_temp/cuts_try_4/charts/charts_library/scno.swf:
 
           . basic Charting library
-        
+
         * utils/BMW/website/metrics_temp/cuts_try_4/xml:
         * utils/BMW/website/metrics_temp/cuts_try_4/xml/auto_generated.xml:
 
